# so6

./: .gdbinit  Cargo.toml  Makefile
.cargo/: config.toml
src/: allocator.rs  boot.S  macros.rs  main.rs  uart.rs
src/kernel/: kernel.ld
