[package]
name = "so6"
version = "0.1.0"
authors = ["Timmy Xiao <timmyxiao1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
